@@ -1,3 +1,10 @@
+2006-07-21  Alp Toker  <alp@atoker.com>
+
+	* libsteticui/CodeGenerator.cs:
+	* libsteticui/PropertyTree.cs:
+	* libstetic/TypedPropertyDescriptor.cs:
+	* libstetic/WidgetUtils.cs: Trivial comment typofixes.
+
 2006-07-04  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* libsteticui/WidgetActionBar.cs: Assign the label of the command
